[tool.poetry]
name = "spiderkeeper"
version = "0.1.0"
description = "A scalable admin ui for spider service"
authors = ["DormyMo <modongming91@gmail.com>", "Saritasa"]
readme = "README.md"
packages = [{include = "SpiderKeeper"}]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.13.1"
aniso8601 = "^9.0.1"
APScheduler = "^3.10.4"
click = "^8.1.7"
Flask = "^2.3.3"
Flask-BasicAuth = "^0.2.0"
Flask-Migrate = "^4.0.7"
Flask-RESTful = "^0.3.9"
Flask-SQLAlchemy = "^3.1.1"
itsdangerous = "^2.1.2"
Jinja2 = "^3.1.4"
Mako = "^1.2.4"
MarkupSafe = "^2.1.5"
python-dateutil = "^2.9.0"
python-editor = "^1.0.4"
pytz = "^2024.1"
requests = "^2.32.0"
six = "^1.16.0"
SQLAlchemy = "^2.0.24"
tzlocal = "^5.2"
Werkzeug = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
